# sarinfer

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/notebooks/: Untitled.ipynb
src/sarinfer/: __init__.py  cli.py  logger.py
src/sarinfer/api/: auth.py
src/sarinfer/config/: mongo_config.py
src/sarinfer/core/: inference.py  s3_manager.py
src/sarinfer/metadata/: metadata_manager.py  model_metadata.py  model_registry.json
src/sarinfer/models/: model_loader.py
src/sarinfer/utils/: errors.py  exceptions.py
tests/: __init__.py  test_sarinfer.py
tests/api/: test_auth.py
tests/core/: test_s3.py  test_s3_manager.py
tests/integration/: test_integration_upload_and_restore.py
tests/metadata/: test_metadata_manager.py  test_mongo_config.py
